Styling detail page confirm date section and solves spacing problems on other pages

--- a/assets/frontend/ttbm_style.css
+++ b/assets/frontend/ttbm_style.css
@@ -57,11 +57,13 @@ div.ttbm_content_area {position: relative;display: -webkit-flex;display: flex;-w
 	border: 1px solid var(--color_border);
 	height: max-content;
 	border-radius: 10px;
+	position: sticky;
+	top: 30px;
 }
 .hip_hop_hotel_theme .ttbm_content__right,
 .ttbm_spring_theme .ttbm_content__right {width: 50%;}
 /**/
-div.ttbm_details_page div.superSlider {margin: 0;}
+div.ttbm_details_page div.superSlider {margin-bottom: 15px;}
 
 div.ttbm_details_page div.ttbm_description {margin: 0 0 var(--dmp) 0;}
 /*********/
@@ -295,7 +297,7 @@ div.ttbm_wraper .carousel_area span {cursor: pointer;}
 }
 div.ttbm_wraper .owl-carousel .owl-stage {display: -webkit-flex;display: flex;}
 div.ttbm_wraper .owl-item div.filter_item,
-div.ttbm_wraper .owl-item .section_item {width: 100%;height: 100%;}
+div.ttbm_wraper .owl-item .section_item {width: 100%;}
 
 @media(min-width: 767px) {
 	.ttbm_widget_content.owl-carousel .owl-stage-outer {
